<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
            android:id="@+id/mi_search"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/type_title"
            app:showAsAction="always|collapseActionView"
            app:actionViewClass="androidx.appcompat.widget.SearchView">
    </item>
    <item
        android:id="@+id/mi_delete"
        android:icon="@android:drawable/ic_menu_delete"
        app:showAsAction="always"
        android:title="@string/delete">
    </item>
    <item
            android:id="@+id/mi_save"
            android:icon="@android:drawable/ic_menu_save"
            app:showAsAction="always"
            android:title="@string/save">
    </item>
</menu>